using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

public class AnimationStrings
{
    public static readonly string isMoving = "isMoving";
    public static readonly string isRunning = "isRunning";
    public static readonly string isGrounded = "isGrounded";
    public static readonly string yVelocity = "yVelocity";
    public static readonly string jump = "jump";
    public static readonly string isOnWall = "isOnWall";
    public static readonly string isOnCeiling = "isOnCeiling";
    public static readonly string fire = "fire";
    public static readonly string hasTarget = "hasTarget";
    public static readonly string isAlive = "isAlive";
    public static readonly string hurt = "hurt"; 
    public static readonly string death = "death"; 
}